--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap');
 *
 {
     font-family: Poppins, Arial, Helvetica, sans-serif;
