--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,28 @@
     padding: 0;
     --main-color: rgb(21, 138, 156);
 }
+.capa{
+    height:500px;
+}
+video {
+    position: absolute;
+    top: 100px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+}
 .header{
     background-image: url(https://images.unsplash.com/flagged/photo-1564767609342-620cb19b2357?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8Y2VycmFqZXJpYXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=1000&q=60);
     background-position: center;
     background-size: cover;
     height: 100vh;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
 
     
 }
@@ -31,19 +47,19 @@
 
 /* Navbar */
 .logo{
-    width: 80px;
+    width: 70px;
 }
 
 .navbar{
     background-color: white;
     color: black;
+    height: 100%;
+   
     
 }
 
 .navbar .navbar-brand{
-    font-family: Lobster;
-    font-weight: 500;
-    font-size: 30px;
+    font-size: 24px;
     color: black;
     padding-left: 10px;
 }
